--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       Tanyakan apa sahaja tentang Kuching &amp; Sarawak (makanan, tempat, pengangkutan, waktu operasi).<br>
       • Jangan spam — satu mesej pada satu masa. <strong>Cooldown 10s</strong> selepas setiap hantar.<br>
       • Pautan boleh diklik:
-        <a href="https://sarawaktourism.com" target="_blank" rel="noopener">Sarawak Tourism</a> |
-        <a href="https://forms.gle/yJ3KPyNpUvEoaG9H9" target="_blank" rel="noopener">Kuiz</a>
+        <a href="https://sarawaktourism.com" target="_blank" rel="noopener">Sarawak Tourism Website</a> |
+        <a href="https://forms.gle/yJ3KPyNpUvEoaG9H9" target="_blank" rel="noopener">Kuiz Pelancongan</a>
     </div>
 
     <!-- reCAPTCHA gate -->
