--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
         loadPreviousSession: true,
         initialMessages: [
           'Selamat datang! 👋 Saya Sam Izrin.',
-          'Tanya apa-apa pasal Kuching & Sarawak: tempat menarik, makanan, waktu operasi, pengangkutan.',
-          'Contoh: “Bila show Darul Hana fountain?”, “Macam mana pergi Bako?”, “Di mana beli kek lapis?”'
+          'Tanya apa-apa mengenai Pelancongan Kuching & Sarawak: tempat menarik, makanan, waktu operasi, pengangkutan.',
         ],
         i18n: { en: { inputPlaceholder: 'Tanya soalan di sini… contoh: “Waktu fountain Darul Hana”' } }
       });
