--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Sarawak AI Tourism Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.css" />
   <!-- reCAPTCHA v3: use your REAL site key -->
   <script src="https://www.google.com/recaptcha/api.js?render=6Lf0xsErAAAAAM7vVvRIqb5JI_2Kf0p10aGzJ88W"></script>
 
@@ -38,7 +38,7 @@
     .gate-card{width:min(560px,92vw);background:#fff;border:1px solid #e9ecf3;border-radius:16px;
       box-shadow:0 12px 30px rgba(0,0,0,.08);padding:clamp(18px,4vw,26px);text-align:center;color:#111}
     .gate-title{font-size:18px;font-weight:800;margin:0 0 6px}
-    .gate-text{font-size:14px;color:#444;margin:0 0 14px;line-height:1.6}
+    .gate-text{font-size:14px;color: #444;margin:0 0 14px;line-height:1.6}
     .gate-btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:12px 18px;
       font-size:15px;font-weight:700;color:#111;background:#d6ff6b;border:0;border-radius:999px;cursor:pointer;
       box-shadow:0 8px 24px rgba(214,255,107,.25)}
@@ -131,10 +131,37 @@
     const show = el => el && el.classList.add('show');
     const hide = el => el && el.classList.remove('show');
 
-    function injectSystemMessage(t){
-      const m=$('#n8n-chat .messages'); if(!m) return null;
-      const d=document.createElement('div'); d.className='message system'; d.textContent=t;
-      m.appendChild(d); m.scrollTop=m.scrollHeight; return d;
+    // --- Helper: wait for chat internals to exist ---
+    function waitForMessages(timeoutMs=6000){
+      return new Promise((resolve) => {
+        const start = performance.now();
+        const tryFind = () => {
+          const area = document.querySelector('#n8n-chat .messages');
+          if (area) return resolve(area);
+          if (performance.now() - start > timeoutMs) return resolve(null);
+          requestAnimationFrame(tryFind);
+        };
+        tryFind();
+      });
+    }
+
+    // Return the created system line element (or null).
+    async function injectSystemMessage(text){
+      let area = document.querySelector('#n8n-chat .messages');
+      if (!area) {
+        // wait briefly for chat to finish mounting
+        area = await waitForMessages(4000);
+      }
+      if (!area) {
+        console.debug('[cooldown] messages area not ready; banner only:', text);
+        return null;
+      }
+      const d = document.createElement('div');
+      d.className = 'message system';
+      d.textContent = text;
+      area.appendChild(d);
+      area.scrollTop = area.scrollHeight;
+      return d;
     }
 
     function installWelcomeAutoHide(){
@@ -168,29 +195,38 @@
       if (btn) btn.disabled = on;
     }
 
-    function startCooldown(seconds = 10){
-      // Prevent double-start
-      if (cooldownTimer) return;
-
+    async function startCooldown(seconds = 10){
+      if (cooldownTimer) return; // already cooling
       cooldownEndAt = Date.now() + seconds*1000;
       setControlsDisabled(true);
 
-      // Create/update system line + banner
-      const update = () => {
+      // Ensure we have a system line to update (if possible)
+      if (!cooldownLine) {
+        cooldownLine = await injectSystemMessage(`⏳ Tunggu ${seconds}s sebelum mesej seterusnya.`);
+      }
+
+      const update = async () => {
         const remainingMs = cooldownRemaining();
         const secs = Math.ceil(remainingMs/1000);
-        if (!cooldownLine) cooldownLine = injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
-        else if (cooldownLine) cooldownLine.textContent = `⏳ Tunggu ${secs}s sebelum mesej seterusnya.`;
+
+        if (!cooldownLine) {
+          // try again to create a line once messages area exists
+          cooldownLine = await injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
+        } else {
+          cooldownLine.textContent = `⏳ Tunggu ${secs}s sebelum mesej seterusnya.`;
+        }
 
         const b=$('#cooldownBanner');
-        b.textContent = `⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
-        show(b);
+        if (b) {
+          b.textContent = `⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
+          show(b);
+        }
 
         if (remainingMs <= 0){
           clearInterval(cooldownTimer); cooldownTimer=null; cooldownLine=null;
-          hide(b);
+          if (b) hide(b);
           setControlsDisabled(false);
-          injectSystemMessage('✅ Anda boleh hantar mesej baru sekarang.');
+          await injectSystemMessage('✅ Anda boleh hantar mesej baru sekarang.');
         }
       };
 
@@ -204,9 +240,12 @@
         e?.preventDefault();
         const secs = Math.ceil(rem/1000) || Math.ceil(COOLDOWN_MS/1000);
         const b=$('#cooldownBanner');
-        b.textContent=`⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
-        show(b); setTimeout(()=>hide(b),1200);
-        if (!cooldownTimer) cooldownLine = injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
+        if (b) {
+          b.textContent=`⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
+          show(b); setTimeout(()=>hide(b),1200);
+        }
+        // Seed a line if none exists yet
+        if (!cooldownTimer && !cooldownLine) { injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`); }
         return true;
       }
       return false;
@@ -216,7 +255,7 @@
       const root=document.getElementById('n8n-chat'); if(!root) return;
       const box=()=>root.querySelector('textarea, input[type="text"]');
       const sendBtn=()=>root.querySelector('.chat-input button');
-      const disable=on=>setControlsDisabled(on);
+      const disable=setControlsDisabled;
 
       // Unlock on assistant reply — but DO NOT override active cooldown
       const mo=new MutationObserver(()=>{ if(!inFlight) return;
@@ -228,18 +267,17 @@
       const safety=()=>setTimeout(()=>{ inFlight=false; if (!cooldownTimer) disable(false); }, FAILSAFE_UNLOCK_MS);
 
       // ENTER
-      root.addEventListener('keydown',(e)=>{ if(e.key!=='Enter') return;
+      root.addEventListener('keydown', (e)=>{ if(e.key!=='Enter') return;
         const b=box(); const val=(b?.value||'').trim(); if(!val){ e.preventDefault(); return; }
         if(!isLocked()) lockSession(); else touchSession();
         if(blockIfCooling(e)) return;
         if(val===lastText && Date.now()-lastSendAt<COOLDOWN_MS){ e.preventDefault(); injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.'); return; }
         inFlight=true; lastSendAt=Date.now(); lastText=val; disable(true); safety();
-        // 👉 Start the visible countdown now
-        startCooldown(10);
+        startCooldown(10); // <-- start visible countdown now
       }, true);
 
       // CLICK
-      root.addEventListener('click',(e)=>{ const t=e.target;
+      root.addEventListener('click', (e)=>{ const t=e.target;
         if(!(t instanceof HTMLElement) || !t.closest('.chat-input button')) return;
         const b=box(); const val=(b?.value||'').trim(); if(!val){ e.preventDefault(); return; }
         if(!isLocked()) lockSession(); else touchSession();
@@ -247,8 +285,7 @@
         if(val===lastText && Date.now()-lastSendAt<COOLDOWN_MS){ e.preventDefault(); injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.'); return; }
         inFlight=true; lastSendAt=Date.now(); lastText=val; disable(true);
         setTimeout(()=>{ inFlight=false; if (!cooldownTimer) disable(false); }, FAILSAFE_UNLOCK_MS);
-        // 👉 Start the visible countdown now
-        startCooldown(10);
+        startCooldown(10); // <-- start visible countdown now
       }, true);
 
       // Idle unlock
