--- a/index.html
+++ b/index.html
@@ -139,90 +139,73 @@
     const show = el => el && el.classList.add('show');
     const hide = el => el && el.classList.remove('show');
 
-    /* =========================================================
-       SEGMENT B — Utility helpers & system messages
-    ==========================================================*/
-    function injectSystemMessage(text){
-      const messages = $('#n8n-chat .messages');
-      if (!messages) { console.warn('[system] messages container not found'); return null; }
-      const div = document.createElement('div');
-      div.className = 'message system';
-      div.textContent = text;
-      messages.appendChild(div);
-      messages.scrollTop = messages.scrollHeight;
-      console.log('[system]', text);
-      return div; // important: return element so we can update later
-    }
+/* =========================================================
+   SEGMENT B — Utility helpers & system messages  (REPLACED)
+==========================================================*/
 
-    function installWelcomeAutoHide(){
-      const note=$('#welcomeNote'), host=$('#n8n-chat'); if(!note||!host) return;
-      const mo=new MutationObserver(()=>{ if(host.querySelector('.message')){ note.classList.add('hidden'); mo.disconnect(); }});
-      mo.observe(host,{childList:true,subtree:true});
-    }
+// Simple shorthands
+const $ = (s, r = document) => r.querySelector(s);
+const show = el => el && el.classList.add('show');
+const hide = el => el && el.classList.remove('show');
 
-    // Session helpers
-    function isLocked(){ const last=Number(localStorage.getItem(LAST_ACTIVITY)||0);
-      if(Date.now()-last>IDLE_RESET_MIN*60_000){ localStorage.removeItem(SESSION_KEY); }
-      return !!localStorage.getItem(SESSION_KEY);
-    }
-    function lockSession(){ localStorage.setItem(SESSION_KEY,'1'); localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
-    function touchSession(){ localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
-    function unlockSession(){ localStorage.removeItem(SESSION_KEY); }
+// Find a reliable container to append system lines
+function getMessagesContainer() {
+  const host = document.getElementById('n8n-chat');
+  if (!host) return null;
 
-    /* =========================================================
-       SEGMENT C — Countdown state + logic
-    ==========================================================*/
-    let lastSendAt=0,lastText='',inFlight=false;
-    let cooldownEndAt = 0;
-    let cooldownTimer = null;
-    let cooldownLine  = null;
+  // Try the common n8n message containers (different builds use different classnames)
+  const selectors = [
+    '.messages',
+    '[data-testid="messages"]',
+    '.chat-messages',
+    '.n8n-chat-messages',
+    '.message-list',
+  ];
+  for (const s of selectors) {
+    const el = host.querySelector(s);
+    if (el) return el;
+  }
 
-    const cooldownRemaining = () =>
-      Math.max(0, (cooldownEndAt || (lastSendAt+COOLDOWN_MS)) - Date.now());
+  // Fallback: last scrollable element with children
+  const candidates = [...host.querySelectorAll('*')].filter(e => {
+    const cs = getComputedStyle(e);
+    return (cs.overflowY === 'auto' || cs.overflowY === 'scroll') && e.children.length > 0;
+  });
+  if (candidates.length) return candidates[candidates.length - 1];
 
-    function setControlsDisabled(on){
-      const root = document.getElementById('n8n-chat');
-      const box = root?.querySelector('textarea, input[type="text"]');
-      const btn = root?.querySelector('.chat-input button');
-      if (box) box.disabled = on;
-      if (btn) btn.disabled = on;
-    }
+  console.warn('[system] messages container not found; appending to host');
+  return host;
+}
 
-    // 👉 controls the visible countdown + disables input
-    function startCooldown(seconds = 10){
-      if (cooldownTimer) { console.log('[debug] cooldown already running'); return; }
-      cooldownEndAt = Date.now() + seconds*1000;
-      console.log('[debug] startCooldown', seconds, 'seconds');
+function injectSystemMessage(text) {
+  const container = getMessagesContainer();
+  if (!container) return null;
+  const div = document.createElement('div');
+  div.className = 'message system';
+  div.textContent = text;
+  container.appendChild(div);
+  container.scrollTop = container.scrollHeight;
+  return div; // we update this node during countdown
+}
 
-      setControlsDisabled(true);
+// Hide the blue instruction note once the first chat message exists
+function installWelcomeAutoHide() {
+  const note = $('#welcomeNote'), host = $('#n8n-chat');
+  if (!note || !host) return;
+  const mo = new MutationObserver(() => {
+    if (host.querySelector('.message')) { note.classList.add('hidden'); mo.disconnect(); }
+  });
+  mo.observe(host, { childList: true, subtree: true });
+}
 
-      const update = () => {
-        const remainingMs = cooldownRemaining();
-        const secs = Math.ceil(remainingMs/1000);
-        console.log('[debug] tick', secs);
-
-        // Update system line (inside chat)
-        if (!cooldownLine) cooldownLine = injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
-        else cooldownLine.textContent = `⏳ Tunggu ${secs}s sebelum mesej seterusnya.`;
-
-        // Update small banner at top-right
-        const b=$('#cooldownBanner');
-        b.textContent = `⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
-        show(b);
-
-        if (remainingMs <= 0){
-          clearInterval(cooldownTimer);
-          cooldownTimer=null;
-          cooldownLine=null;
-          hide(b);
-          setControlsDisabled(false);
-          injectSystemMessage('✅ Anda boleh hantar mesej baru sekarang.');
-        }
-      };
-
-      update(); // show immediately
-      cooldownTimer = setInterval(update, 1000);
-    }
+// Session helpers (unchanged)
+function isLocked(){ const last=Number(localStorage.getItem(LAST_ACTIVITY)||0);
+  if(Date.now()-last>IDLE_RESET_MIN*60_000){ localStorage.removeItem(SESSION_KEY); }
+  return !!localStorage.getItem(SESSION_KEY);
+}
+function lockSession(){ localStorage.setItem(SESSION_KEY,'1'); localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
+function touchSession(){ localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
+function unlockSession(){ localStorage.removeItem(SESSION_KEY); }
 
     // Block sends if cooling or a request is still in-flight
     function blockIfCooling(e){
@@ -239,9 +222,8 @@
       return false;
     }
 
-    /* =========================================================
-   SEGMENT D — Guards: intercept input & start cooldown AFTER bot reply
-   (more robust assistant-message detector + debug logs)
+/* =========================================================
+   SEGMENT D — Guards: intercept input & start cooldown AFTER bot reply (REPLACED)
 ==========================================================*/
 function installGuards(){
   const root = document.getElementById('n8n-chat'); 
@@ -251,7 +233,7 @@ function installGuards(){
   const sendBtn = () => root.querySelector('.chat-input button');
   const disable = on => setControlsDisabled(on);
 
-  // --- Helper: is this node an assistant/bot message?
+  // Which nodes look like assistant messages?
   const assistantSelectors = [
     '.assistant',
     '.message.assistant',
@@ -260,40 +242,53 @@ function installGuards(){
     '.from-bot',
     '.message--assistant',
     '[data-source="assistant"]',
-    '[data-role="assistant"]'
+    '[data-role="assistant"]',
   ];
   function isAssistantNode(node) {
     if (!(node instanceof HTMLElement)) return false;
-    // 1) direct match
     if (assistantSelectors.some(sel => node.matches(sel))) return true;
-    // 2) descendant match
     if (assistantSelectors.some(sel => node.querySelector(sel))) return true;
-    // 3) heuristic: message container that is NOT clearly a user bubble
     const cls = node.className || '';
-    if (/\bmessage\b/.test(cls) && !/\buser\b/.test(cls) && !/\bfrom-user\b/.test(cls)) {
-      return true;
-    }
-    return false;
+    return /\bmessage\b/.test(cls) && !/\buser\b/.test(cls) && !/\bfrom-user\b/.test(cls);
   }
 
-  // --- Observe DOM for new assistant messages while a send is in-flight
+  // --- Observe DOM: start cooldown when reply "settles" (no change for 800ms)
+  let currentAssistNode = null;
+  let settleTimer = null;
+  const SETTLE_MS = 800; // adjust if needed
+
   const mo = new MutationObserver(mutations => {
     if (!inFlight) return;
+
+    let touchedAssistant = false;
+
     for (const m of mutations) {
       for (const n of m.addedNodes) {
         if (isAssistantNode(n)) {
-          console.log('[debug] assistant message detected → start cooldown');
-          inFlight = false;
-          touchSession();
-          startCooldown(10);              // 🔥 start visible 10s timer here
-          return;
+          currentAssistNode = n instanceof HTMLElement ? n : currentAssistNode;
+          touchedAssistant = true;
         }
       }
+      if (currentAssistNode && (m.target === currentAssistNode || currentAssistNode.contains(m.target))) {
+        touchedAssistant = true;
+      }
+    }
+
+    if (touchedAssistant) {
+      // Debounce: when updates stop for SETTLE_MS, we consider the reply finished
+      if (settleTimer) clearTimeout(settleTimer);
+      settleTimer = setTimeout(() => {
+        if (inFlight) {
+          inFlight = false;        // request done
+          touchSession();
+          startCooldown(10);       // ✅ start visible 10s timer here
+        }
+      }, SETTLE_MS);
     }
   });
-  mo.observe(root, { childList: true, subtree: true });
+  mo.observe(root, { childList: true, subtree: true, characterData: true });
 
-  // Safety unlock in case the stream stalls; if cooldown is running we stay disabled
+  // Safety unlock in case stream stalls; if cooldown is running we stay disabled
   const safety = () => setTimeout(() => { 
     inFlight = false; 
     if (!cooldownTimer) disable(false); 
@@ -309,7 +304,6 @@ function installGuards(){
     if (!isLocked()) lockSession(); else touchSession();
     if (blockIfCooling(e)) return;
 
-    // duplicate guard inside window
     if (val === lastText && Date.now() - lastSendAt < COOLDOWN_MS) {
       e.preventDefault();
       injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.');
